IVYPORTAL-12505 - Various or urgent requests in IVYPORTAL - S212 - IVYPORTAL-12477 - Process Name: issue with truncation
Former-commit-id: 682cb111506ecf0ac4cdc6a17e823cf9f6bdff1b

--- a/AxonIvyPortal/PortalStyle/webContent/resources/css/portal.css
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/css/portal.css
@@ -556,7 +556,9 @@ body .process-widget .ui-selectbooleanbutton.ui-state-active .ui-icon {
 .process-grid-view__name,
 .grid-view-form .process-grid-view-name {
   font-size: var(--process-grid-name-font-size);
-  font-weight: var(--process-grid-name-font-weight); }
+  font-weight: var(--process-grid-name-font-weight);
+  word-break: break-word;
+}
 
 .edit-process-header-group,
 .edit-process-icon-group {
